--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "recharts": "^2.6.2",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
