--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-spotify-api": "^3.0.0",
     "recharts": "^2.6.2",
     "vite-plugin-svgr": "^3.2.0"
   },
