--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.4.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.11.2",
     "react-spotify-api": "^3.0.0",
     "recharts": "^2.6.2",
+    "recoil": "^0.7.7",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
