--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
     "recharts": "^2.6.2",
     "recoil": "^0.7.7",
     "vite-plugin-svgr": "^3.2.0"
